# my-agentic-stuff

./: .gitattributes  .gitignore  .gitmodules  ADDING.md  INSTALL-RSYNC.md  README.md  install.sh
.claude-plugin/: marketplace.json
.github/plugin/: marketplace.json
.github/workflows/: validate-marketplace.yml
plugins/agent-doctor/: SKILL.md  plugin.json
plugins/authoring/: plugin.json
plugins/decks/: plugin.json
plugins/eng-ops/: plugin.json
plugins/my/: plugin.json
plugins/sessions/: plugin.json
scripts/: validate-marketplace.py
skills/agent-refiner/: SKILL.md  plugin.json
skills/build-deck/: .gitignore  SKILL.md  plugin.json
skills/chronicle-collect/: plugin.json
skills/code-review/: SKILL.md  plugin.json
skills/diagram-help/: SKILL.md  plugin.json
skills/engdirs-status/: plugin.json
skills/llm-council/: SKILL.md  plugin.json
skills/pandoc-docx/: .gitignore  SKILL.md  plugin.json
skills/plugin-creator/: .gitignore  SKILL.md  plugin.json
skills/skill-creator/: SKILL.md  plugin.json
skills/slop-check/: .gitignore  SKILL.md  plugin.json  pyproject.toml
skills/slop-check/examples/: corporate-slop.md  list-heavy.md  writing-patterns.md
skills/slop-check/references/: slop-fix-types.yaml  slop-structure.yaml  slop-words.yaml
skills/slop-check/scripts/: slop_lint.py  slop_structure_lint.py
skills/slop-check/src/slop_check/: __init__.py  common.py  slop_lint.py  slop_structure_lint.py
skills/slop-check/tests/: test_slop_linters.py
skills/tech-search/: SKILL.md  plugin.json
skills/visual-design/: SKILL.md  plugin.json
(+59 files in other folders)
